@@ -7,33 +7,27 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.jwt.JwtDecoder;
 import org.springframework.security.oauth2.jwt.JwtEncoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.oauth2.jwt.NimbusJwtEncoder;
-import org.springframework.security.oauth2.jwt.Jwt;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
-import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
 import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
 
 @Configuration
-@EnableMethodSecurity(securedEnabled = true) // Kích hoạt bảo mật cấp phương thức.  Điều này cho phép sử dụng @PreAuthorize
+@EnableMethodSecurity(securedEnabled = true)
 public class SecurityConfiguration {
 
     @Value("${checkscam.jwt.base64-secret}")
@@ -42,6 +36,11 @@ public class SecurityConfiguration {
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
+    }
+    
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 
     @Bean
@@ -52,16 +51,19 @@ public class SecurityConfiguration {
                         // Public endpoints
                         .requestMatchers("/api/v1/auth/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/v1/news/**").permitAll()
-                        .requestMatchers(HttpMethod.POST,"/api/v1/report/**").permitAll()
-                        .requestMatchers(HttpMethod.GET,"/api/v1/report/image/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/tournaments").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/tournaments/*").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/tournaments/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/tournaments/*/teams").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/tournaments/*/matches").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/tournaments/*/bracket").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/teams/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/matches/**").permitAll()
                         
                         // Authenticated endpoints
                         .requestMatchers("/api/v1/news/**").authenticated()
-                        .requestMatchers("/api/v1/users/**").authenticated()
-                        .requestMatchers("/api/v1/report/**").authenticated()
                         .requestMatchers("/api/tournaments/**").authenticated()
+                        .requestMatchers("/api/teams/**").authenticated()
+                        .requestMatchers("/api/matches/**").authenticated()
                         
                         .anyRequest().authenticated()
                 )
@@ -75,30 +77,25 @@ public class SecurityConfiguration {
 
                 .cors(httpSecurityCorsConfigurer -> {
                     CorsConfiguration configuration = new CorsConfiguration();
-                    configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+                    configuration.setAllowedOrigins(Arrays.asList(
+                        "http://localhost:3000",
+                        "http://localhost:4200",
+                        "http://127.0.0.1:3000",
+                        "http://localhost:3001"
+                    ));
                     configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-                    configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-                    configuration.setExposedHeaders(List.of("x-auth-token"));
+                    configuration.setAllowedHeaders(Arrays.asList("*"));
+                    configuration.setAllowCredentials(true);
+                    configuration.setExposedHeaders(Arrays.asList("Authorization", "x-auth-token"));
                     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                     source.registerCorsConfiguration("/**", configuration);
                     httpSecurityCorsConfigurer.configurationSource(source);
                 })
-                .formLogin(AbstractHttpConfigurer::disable) // Vô hiệu hóa login form mặc định
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)); // Đặt session thành stateless (cho API)
+                .formLogin(AbstractHttpConfigurer::disable)
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
         return http.build();
     }
-
-//    @Bean
-//    public JwtAuthenticationConverter jwtAuthenticationConverter() {
-//        JwtGrantedAuthoritiesConverter grantedAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
-//        grantedAuthoritiesConverter.setAuthoritiesClaimName("roles"); // claim trong JWT
-//        grantedAuthoritiesConverter.setAuthorityPrefix("ROLE_"); // để dùng hasRole()
-//
-//        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
-//        converter.setJwtGrantedAuthoritiesConverter(grantedAuthoritiesConverter);
-//        return converter;
-//    }
 
     @Bean
     public JwtDecoder jwtDecoder() {
@@ -107,7 +104,7 @@ public class SecurityConfiguration {
             try {
                 return jwtDecoder.decode(token);
             } catch (Exception e) {
-                System.out.println(">>> JWT error: " + e.getMessage());
+                System.out.println(">>> JWT decode error: " + e.getMessage());
                 throw e;
             }
         };
@@ -115,11 +112,11 @@ public class SecurityConfiguration {
 
     @Bean
     public JwtEncoder jwtEncoder() {
-        return new NimbusJwtEncoder(new ImmutableSecret<>(getSecretKey())); // Mã hóa JWT
+        return new NimbusJwtEncoder(new ImmutableSecret<>(getSecretKey()));
     }
 
     private SecretKey getSecretKey() {
-        byte[] keyBytes = Base64.from(jwtKey).decode(); // Giải mã base64 của JWT secret
-        return new SecretKeySpec(keyBytes, 0, keyBytes.length, SecurityUtil.JWT_ALGORITHM.getName()); // Tạo SecretKey
+        byte[] keyBytes = Base64.from(jwtKey).decode();
+        return new SecretKeySpec(keyBytes, 0, keyBytes.length, SecurityUtil.JWT_ALGORITHM.getName());
     }
 }
